--- a/index.html
+++ b/index.html
@@ -101,22 +101,22 @@
                 <!-- Bloques por cada producto -->
                 <section class="cajasTienda">
                     <!-- Links vacios pero llevaran a la pagina del producto  -->
-                    <a href=""><img class="imagenesTiendaInicio" src="images/TRX1.jpeg" alt="TRX"></a>
+                    <a href=""><img src="images/TRX1.jpeg" alt="TRX"></a>
                     <h4>TRX</h4>
                     <p>19,99€</p>
                 </section>
                 <section class="cajasTienda">
-                    <a href=""><img class="imagenesTiendaInicio" src="images/Dumbells.jpg" alt="Mancuernas"></a>
+                    <a href=""><img src="images/Dumbells.jpg" alt="Mancuernas"></a>
                     <h4>Kit de mancuernas 20KG</h4>
                     <p>34,99€</p>
                 </section>
                 <section class="cajasTienda">
-                    <a href=""><img class="imagenesTiendaInicio" src="images/Kettlebell.jpg" alt="Kettlebell"></a>
+                    <a href=""><img src="images/Kettlebell.jpg" alt="Kettlebell"></a>
                     <h4>Kettlebells</h4>
                     <p>13,99€</p>
                 </section>
                 <section class="cajasTienda">
-                    <a href=""><img class="imagenesTiendaInicio" src="images/Esterilla.jpg" alt="Esterilla"></a>
+                    <a href=""><img src="images/Esterilla.jpg" alt="Esterilla"></a>
                     <h4>Esterilla 140x50 cm</h4>
                     <p>3,99€</p>
                 </section>
@@ -139,7 +139,7 @@
                 <a href=""><img class="imagenBlog" src="images/Dominada.jpg" alt="Dominada"></a>
                 <section class="Textos">
                     <h3>Los 5 Ejercicios mas complejos TREN SUPERIOR</h3>
-                    <p>Estos son los 5 ejercicios más completos de tren superior, algunos ya conocidos y otros que quizás no sabrías anteriormente que era tan completos. La mayoria de ellos podras incluirlos en tus sesiones de entrenamiento facilmente o incluso alguna variacion de este.</p>
+                    <p>Estos son los 5 ejercicios más completos de tren superior, algunos ya conocidos y otros que quizás no sabrías anteriormente que era tan completos...</p>
                 </section>
                 <!-- Imagen vacia pero llevara un contador de me gustas, visualizaciones y comentarios posteriormente -->
                 <img class="corazon" src="images/corazonTransparenteVacio.png" alt="corazonVacio">
@@ -190,32 +190,32 @@
             <h4>"La fortaleza no llega de la capacidad física. Llega de una voluntad indomable"</h4>
             <p>-Mahatma Gandhi</p>
         </section>
-        <h5> &copy; 2023 </h5>
     </section>
 
     <!-- Contenedor de los botones de FAQ, devoluciones y atencion al cliente -->
     <section id="Buttons">
-        <button class ="botones">
+        <section class ="botones">
             <a href="">
                 <p>Politica de devoluciones</p>
             </a>
-        </button>
-        <button class ="botones">
+        </section>
+        <section class ="botones">
             <a href="">
                 <p>FAQ</p>
             </a>
-        </button>
-        <button class ="botones">
+        </section>
+        <section class ="botones">
             <a href="">
                 <p>Atencion al cliente</p>
             </a>
-        </button>
+        </section>
     </section>
    
-    <!-- Contenedor de la imagen con los metodos de pago -->
+    <h5> &copy; 2023 </h5>
+    <!-- Contenedor de la imagen con los metodos de pago
     <section id="metodosPago">
        <img src="images/boton-comprar.png" alt="Compra Ahora">
-    </section>
+    </section> -->
    
 </footer>
     
