update media queries

--- a/index.html
+++ b/index.html
@@ -142,15 +142,19 @@
                     <p>Estos son los 5 ejercicios más completos de tren superior, algunos ya conocidos y otros que quizás no sabrías anteriormente que era tan completos...</p>
                 </section>
                 <!-- Imagen vacia pero llevara un contador de me gustas, visualizaciones y comentarios posteriormente -->
-                <img class="corazon" src="images/corazonTransparenteVacio.png" alt="corazonVacio">
+                <!-- <section class="icons-bar">
+                    <a href=""><img class="corazon" src="images/corazonTransparenteVacio.png" alt="corazonVacio"></a>
+                </section>             -->
             </section>
             <section class="entradasBlog">
                 <a href=""><img class="imagenBlog" src="images/Recetas-con-avena.jpg" alt="Avena"></a>
                 <section class="Textos">
-                    <h3>Recetas que puedes hacer si tienes POCO tiempo</h3>
+                    <h3>Recetas si tienes POCO tiempo</h3>
                     <p>En caso de que tengas poco tiempo para prepararte una comida, aqui te dejamos varias ideas de recetas, con una buena aportacion de nutrientes...</p>
                 </section>
-                <img class="corazon" src="images/corazonTransparenteVacio.png" alt="corazonVacio">
+                <!-- <section class="icons-bar">
+                    <a href=""><img class="corazon" src="images/corazonTransparenteVacio.png" alt="corazonVacio"></a>
+                </section>             -->
             </section>
 
             <section class="entradasBlog">
@@ -159,7 +163,9 @@
                     <h3>Ejercicio MAS complejos TREN INFERIOR</h3>
                     <p>Estos son los ejercicios mas completos de tren inferior, o ejercicios que mas grupos musculares abarca para un entrenamiento mas...</p>
                 </section>
-                <img class="corazon" src="images/corazonTransparenteVacio.png" alt="corazonVacio">
+                <!-- <section class="icons-bar">
+                    <a href=""><img class="corazon" src="images/corazonTransparenteVacio.png" alt="corazonVacio"></a>
+                </section> -->
             </section>
 
                 <!-- Te lleva donde puedes ver todas las entradas de los blogs -->
@@ -175,13 +181,7 @@
 
 </body>
 
-<footer>
-    <!-- Contenedor de las redes sociales que te llevan a la pagina de su respectiva red segun la imagen -->
-    <section id="socialNetworks">
-        <a href="http://www.facebook.com"><img class="logosRedesSociales" src="images/FaceboolLogo.png" alt="Facebook"></a>
-        <a href="http://www.instagram.com"><img class="logosRedesSociales" src="images/instagramLogo.png" alt="Instagram"></a>
-        <a href="http://www.twitter.com"><img class="logosRedesSociales" src="images/twitterLogo.png" alt="Twitter"></a>
-    </section>
+<footer>  
 
     <!-- Contenedor del Speech, con su imagen y la frase, aprovechando que esta por el centro coloco aqui tambien el copyright -->
     <section id="motivationalSpeech">
@@ -192,30 +192,22 @@
         </section>
     </section>
 
-    <!-- Contenedor de los botones de FAQ, devoluciones y atencion al cliente -->
-    <section id="Buttons">
-        <section class ="botones">
-            <a href="">
-                <p>Politica de devoluciones</p>
-            </a>
+    <section id="footer">
+        <!-- Contenedor de las redes sociales que te llevan a la pagina de su respectiva red segun la imagen -->
+        <section id="socialNetworks" class="sectionFooter">
+            <a href="http://www.facebook.com"><img class="logosRedesSociales" src="images/FaceboolLogo.png" alt="Facebook"></a>
+            <a href="http://www.instagram.com"><img class="logosRedesSociales" src="images/instagramLogo.png" alt="Instagram"></a>
+            <a href="http://www.twitter.com"><img class="logosRedesSociales" src="images/twitterLogo.png" alt="Twitter"></a>
         </section>
-        <section class ="botones">
-            <a href="">
-                <p>FAQ</p>
-            </a>
-        </section>
-        <section class ="botones">
-            <a href="">
-                <p>Atencion al cliente</p>
-            </a>
-        </section>
+
+        <small class="sectionFooter">&copy; 2023</small>
+
+        <ul class="sectionFooter">
+            <li><a href="">Politica de devoluciones</a></li>
+            <li><a href="">FAQ</a></li>
+            <li><a href="">Atención al cliente</a></li>
+        </ul>
     </section>
-   
-    <h5> &copy; 2023 </h5>
-    <!-- Contenedor de la imagen con los metodos de pago
-    <section id="metodosPago">
-       <img src="images/boton-comprar.png" alt="Compra Ahora">
-    </section> -->
    
 </footer>
     
